fix elevation [CI SKIP]

--- a/js/src/index.html
+++ b/js/src/index.html
@@ -27,6 +27,7 @@
                             <th scope="col">Sat</th>
                             <th scope="col">Azimuth</th>
                             <th scope="col">Elevation</th>
+                            <th scope="col">Distance</th>
                         </tr>
                         </thead>
                         <tbody id='sat_body'>
